Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 <h3>
 <a id="logo-attribution" class="anchor" href="#logo-attribution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Logo attribution</h3>
 
-<p>Michael Coghlan. 
-<a href="https://www.flickr.com/photos/mikecogh/5300353420">https://www.flickr.com/photos/mikecogh/5300353420</a>
-<a href="https://creativecommons.org/licenses/by-sa/2.0/">https://creativecommons.org/licenses/by-sa/2.0/</a></p>
+<p>Michael Coghlan. <a href="https://www.flickr.com/photos/mikecogh/5300353420">flickr</a> - <a href="https://creativecommons.org/licenses/by-sa/2.0/">license</a></p>
 
       <footer class="site-footer">
 
