--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
       <h1>
 <a id="we-are-fenderton" class="anchor" href="#we-are-fenderton" aria-hidden="true"><span class="octicon octicon-link"></span></a>We are Fenderton.</h1>
 
-<h2>
-<a id="licenses" class="anchor" href="#licenses" aria-hidden="true"><span class="octicon octicon-link"></span></a>Licenses</h2>
-
-<h3>
-<a id="logo-attribution" class="anchor" href="#logo-attribution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Logo attribution</h3>
-
-<p>Michael Coghlan. <a href="https://www.flickr.com/photos/mikecogh/5300353420">flickr</a> - <a href="https://creativecommons.org/licenses/by-sa/2.0/">license</a></p>
+<p>We write code. And make websites that sell good stuff.</p>
 
       <footer class="site-footer">
 
